# minesweeper-and-matricies

./: CLAUDE.md  CMakeLists.txt  README.markdown  SOLVING-MINESWEEPER.md
ai-planning/: critique-solving-minesweeper-v2.md  critique-solving-minesweeper.md  explainer.md  improvements.md  performance-improvements.md  proposal-board-from-file.md  proposal-cli-options.md  proposal-logging-improvements.md  proposal-monte-carlo-sampler.md  proposal-parallel-simulation.md  proposal-probabilistic-analysis.md
bench/: CMakeLists.txt  benchmarks.cpp
examples/: full-solve.board  monte-carlo.board  worked-example.board
src/: CMakeLists.txt  boardspec.cpp  boardspec.h  cli.cpp  cli.h  config.h  game.cpp  game.h  logging.h  main.cpp  matrix.h  sampler.cpp  sampler.h  solver.cpp  solver.h  vector.h
test/: CMakeLists.txt  testmatrix.cpp
